# sentiment_analysis_ontology

./: pyproject.toml
data/: data_handling.py
model_training/: bert_training_eval.py
ontology_enhancement/: ontology_augmentation.py
